[package]
name = "browser-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = { path = "html" }
css_v2_1 = { path = "css_v2_1" }
document_parser = { path = "document_parser" }

[features]
